# clcp-neurips-2020

./: Makefile  README.org  default.nix  derivation.nix  pyproject.toml  setup.py  shell.nix
adversarial/actor/: __init__.py  dqn.py
adversarial/algo/: __init__.py  dqn.py  sac.py
adversarial/critic/: __init__.py  dqn.py
adversarial/diayn/: __init__.py  base.py  continuous.py  discrete.py
adversarial/env/: __init__.py  diayn_wrapper.py  pointmass.py  video_wrapper.py
adversarial/loaders/: __init__.py  dads_loader.py  ours_loader.py
adversarial/sampler/: __init__.py  adversarial.py
adversarial/utils/: __init__.py  video.py
ant-hrl-maze/: .gitignore  derivation.nix  setup.py
ant-hrl-maze/ant_hrl_maze/: __init__.py  ant_v4.py  ant_v4_maze.py  ant_v4_maze_test.py  hierarchical_wrapper.py  policy.py  reset_free_wrapper.py  waypoint.py
ant-hrl-maze/policies/: .gitignore  generate.sh  softlearning_to_policy.py
ant-hrl-maze/test/: make_pictures.py  manual_control.py  manual_control_waypoint.py  sanity_check.py  sanity_check_2.py  sanity_check_3.py  test_ant_offset.py  test_ant_reset_free.py  test_ant_waypoint.py  test_hierarchical_waypoint.py  test_maze_env.py  test_reset_free.py
dads/: MANIFEST.in  derivation.nix  env.yml  launch.sh  setup.py  shell.nix
dads/nix/: robel.nix  (+6 more)
pyrl/: .gitignore  Makefile  README.org  default.nix  derivation.nix  setup.py  shell.nix
scripts/: adv  adv2  diayn  dqn  launch.el  launch.sh  maze  sac  waypoint
test/: test_all_diayn.py  test_diayn_wrapper.py  test_dqn.py  test_pointmass.py  test_sac.py  test_video_wrapper.py
(+68 files in other folders)
